# pbcr

./: .gitignore  README.md  pyproject.toml  resolv.conf
.github/workflows/: pylint.yml  pytest.yml
examples/nginx/: default.conf  run.sh
pbcr/: containers.py  docker_registry.py  filestorage.py  forkbarrier.py  images.py  libc.py  main.py  run.py  storage.py  types.py
pbcr/networking/: __init__.py  ip.py  processfd.py  tcp.py  utils.py
pbcr/tests/: test_docker_registry.py  test_filestorage.py  test_images_table.py  test_networks.py
