[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pbcr"
version = "0.1.0"

dependencies = [
    "httpx",
]

[tools.setuptools]
py-modules = ["pbcr"]

[project.entry-points.console_scripts]
pbcr = "pbcr.main:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pylint",
    "mypy",
    "scapy",
]

[tool.pytest.ini_options]
#addopts = "-svx --cov --cov-report term-missing"
